fixed layout issue of bulk upload csv file of store customers

--- a/src/assets/stylesheets/main.css
+++ b/src/assets/stylesheets/main.css
@@ -3515,3 +3515,6 @@ label {
     font-size: 14px;
     margin-top: 5px;
 }
+.font-size-14px{
+    font-size: 14px;
+}
